--- a/KalendarzKariery/KalendarzKariery/Views/Home/_AddNewEvent.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Home/_AddNewEvent.cshtml
@@ -45,7 +45,7 @@
 					</div>
 					<div style="display:inline-block;">
 						<label>zaczyna się o godzinie: </label>
-						<select id="startHourSelectBox" data-bind="value: startTime" >
+						<select id="startHourSelectBox" data-bind="value: date.startHour" >
 						<option value="7">7</option>
 						<option value="8">8</option>
 						<option value="9">9</option>
@@ -65,7 +65,7 @@
 					</div>
 					<div style="display:inline-block;">
 						<label>kończy się o godzinie: </label>
-						<select id="endHourSelectBox" data-bind="value: endTime" >
+						<select id="endHourSelectBox" data-bind="value: date.endHour" >
 						<option value="7">7</option>
 						<option value="8">8</option>
 						<option value="9">9</option>
