--- a/KalendarzKariery/KalendarzKariery/Content/Site.css
+++ b/KalendarzKariery/KalendarzKariery/Content/Site.css
@@ -5,9 +5,11 @@
 
 body {
 	font-size: .85em;
-	font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
+	line-height:1.6;
+	font-family: 'Oxygen',"Segoe UI", Verdana, Helvetica, Sans-Serif;
 	padding: 0px;
 	margin: 0px;
+	font-weight:400;
 }
 
 header, footer, nav, section, div {
@@ -37,7 +39,8 @@ body header {
 	color: rgb(177,177,177);
 	display: table;
 	table-layout: fixed;
-	border-spacing: 2px;
+	border-spacing: 1px;
+	margin-top:20px;
 }
 
 #calendarBg {
@@ -48,11 +51,7 @@ body header {
 
 
 #details {
-	margin: auto;
-	position: relative;
 	width: 100%;
-	height: 600px;
-	color: rgb(177,177,177);
 }
 
 #detailsBg {
@@ -73,14 +72,14 @@ body header {
 }
 
 #lobbyBg {
-background:white;
+	background: white;
 	position: relative;
 	width: 90%;
 	left: 0px;
 }
 
 #lobby-logo {
-	background-image: url(../img/kalendarz2.png);
+	background-image: url(../Images/kalendarzGray3.png);
 	font-size: 1em;
 	width: 680px;
 	height: 100%;
@@ -145,26 +144,40 @@ background:white;
 	height: 14px;
 	display: table-cell;
 	overflow: hidden;
-	text-align: center;
+	background:white;
+	color:rgb(204,204,204);
+	position:relative;
 }
 
 .hour {
-	padding: 5px;
 	font-size: 10px;
+	position:absolute;
 }
 
 #calendar-menu-header {
 	display: table-caption;
+	text-align: center;
+	
+	height: 60px;
+	color:white;
+	border-left:1px solid #D8D8D8;
+	background:rgb(250,250,250);
+	border-bottom:1px solid white;
+	border-top:1px solid #D8D8D8;
+
+	/*border-left:2px solid #313131;
+	border-right:2px solid #313131;*/
 }
 
 .site-menu-header {
 	text-align: center;
-	margin-top: 30px;
-	margin-bottom: 5px;
+	margin-top: 20px;
 	min-height: 132px;
 	position: relative;
-border-top:1px solid rgb(221,221,221);
-/*border-bottom:1px solid rgb(221,221,221);*/
+	background:rgb(37, 37, 37);
+	border-right:2px solid #313131;
+	border-top: 1px solid rgb(221,221,221);
+	/*border-bottom:1px solid rgb(221,221,221);*/
 }
 
 .weekday-container {
@@ -172,12 +185,14 @@ border-top:1px solid rgb(221,221,221);
 }
 
 .weekday {
-	border: 2px solid rgba(255, 255, 255, 0.9);
+	/*border: 2px solid white;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
-	border-radius: 10px;
+	border-radius: 10px;*/
 	display: table-cell;
 	text-align: center;
+	background:white;
+	/*background: rgba(255,255,255,.5);*/
 }
 
 	.weekday:nth-child(6) {
@@ -191,7 +206,7 @@ border-top:1px solid rgb(221,221,221);
 .calendar-cell {
 	height: 80px;
 	display: table-cell;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	position: relative;
 }
 
@@ -206,16 +221,10 @@ border-top:1px solid rgb(221,221,221);
 }
 
 .current-month {
-	/*
-border: 2px solid rgb(235,235,235);
-*/
 	border: 2px solid white;
-	background-color: rgba(255,255,255,.9);
-	/*
-	-moz-box-shadow: 0px 3px 5px rgb(235,235,235);
-	-webkist-box-shadow: 0px 3px 5px rgb(235,235,235);
-	box-shadow: 0px 3px 5px rgb(235,235,235);
-	*/
+	background-color: rgb(253,253,253);
+	box-shadow:rgb(235, 235, 235) 0px 3px 5px;
+	color: black;
 }
 
 	.current-month span {
@@ -230,9 +239,6 @@ border: 2px solid rgb(235,235,235);
 	border: 2px solid #ddd;
 	background-color: #eee;
 	position: relative;
-	-moz-box-shadow: 0px 3px 5px #ddd;
-	-webkist-box-shadow: 0px 3px 5px #ddd;
-	box-shadow: 0px 3px 5px #ddd;
 }
 
 	.other-month span {
@@ -253,33 +259,38 @@ border: 2px solid rgb(235,235,235);
 
 
 #leftSideCalendar {
-	/*background-image: url("../Images/kalendarzTloLewy.png");*/
-	/*background-position: left;*/
-	background:rgb(37, 37, 37);
+	/*background-image: url("../Images/kalendarzTloLewy.png");
+	background-position:right top;*/
+	/*background: rgb(37, 37, 37);*/
 	left: 0px;
+	/*border-right:1px solid #151718;*/
+	/*z-index:2;*/
+	border-right:1px solid #D8D8D8;
 }
 
 #rightSideCalendar {
-	/*background-image: url("../Images/kalendarzTloPrawo.png");*/
-	/*background-position: left;*/
-	background:rgb(37, 37, 37);
+	/*background-image: url("../Images/kalendarzTloPrawo.png");
+	background-position: left top;*/
+	/*background: rgb(37, 37, 37);*/
 	right: 0px;
+	border-left:1px solid #D8D8D8;
+	/*border-left:1px solid #151718;*/
 }
 
 #leftSideDetails {
 	/*background-image: url("../Images/kalendarzTloLewy.png");
-	background-position: right;*/
-	background:rgb(37, 37, 37);
+	background-position: right top;*/
+	background: rgb(37, 37, 37);
 	left: 0px;
 }
 
 #rightSideLobby {
-	/*background-image: url("../Images/kalendarzTloPrawo2.png");*/
-	/*background-position: left;*/
+	/*background-image: url("../Images/kalendarzTloPrawo.png");
+	background-position: left top;*/
 	right: 0px;
-	/*background-repeat: repeat-y;*/
-	background:rgb(37, 37, 37);
 	height:3000px;
+	background: rgb(37, 37, 37);
+	border-left: 1px solid #151718;
 }
 
 
@@ -289,38 +300,25 @@ border: 2px solid rgb(235,235,235);
 }
 
 .menu-item {
-	border-top: 2px solid rgb(221, 221, 221);
-    background: rgb(245, 245, 245);
-	height: 50px;
-	color:rgb(122, 122, 122);
-	font-size:0.8em;
-	box-shadow: inset 0px 10px 10px -10px;
-	/*padding-top: 2px;
-	border-top: 2px solid rgb(240, 240, 240);
-	color: rgb(199, 185, 185);
-	text-align: center;	
-	border-bottom: 2px solid rgb(218, 218, 218);
-	font-size: .8em;
-	padding: 2px;
-	padding-left: 5px;
-    box-shadow:inset 0px 10px 10px -10px;
-	margin-top:1px;*/
+	border-top: 2px solid rgb(233, 233, 233);
+	/*background: rgb(252, 252, 252);*/
+	/*box-shadow:4px 2px 8px rgb(94, 94, 94);*/
+	height: 30px;
+	color: rgb(151, 151, 151);
+	font-size: 0.8em;
 }
 
-.menu-item span {
-
-position:relative;
-top:10px;
-}
+	.menu-item span {
+		position: relative;
+		top: 10px;
+	}
 
 .menu-item-container {
-	margin:2px;
+	margin: 2px;
 	margin-right:3px;
-	position:relative;
+	position: relative;
 	/*top:-10px;*/
 	float: right;
-	max-width: 180px;
-	position: relative;
 }
 
 .triangle-header {
@@ -338,7 +336,7 @@ top:10px;
 }
 
 .border-item {
-	width: 100px;
+	width: 95px;
 	/*
 		border-color: rgb(202, 255, 208);
 	*/
@@ -452,18 +450,18 @@ background:rgb(115, 233, 162);
 	width: 1px;
 	opacity: .1;
 	background: gray;
-	height: 100%;
-	visibility: hidden;
 }
 
 .event-rectangle {
+	color: black;
+	overflow: hidden;
 	position: absolute;
 	height: 16px;
 	z-index: 2;
 	display: none;
 	border-radius: 8px;
 	border: 2px solid;
-	background: rgba(255,255,255,.9);
+	/*background: rgba(255,255,255,.9);*/
 }
 
 .event-hover-container {
@@ -475,7 +473,6 @@ background:rgb(115, 233, 162);
 }
 
 .lobby-content-body {
-
 }
 
 	.lobby-content-body .title-header {
@@ -483,10 +480,13 @@ background:rgb(115, 233, 162);
 	}
 
 .title-header {
-	text-align: center;
-	font-size: 2em;
-	padding: 10px;
-	background: rgb(236, 236, 236);
+text-align: center;
+font-size: 2em;
+padding: 10px;
+background: rgb(37, 37, 37);
+border-top: 1px solid #313131;
+border-right: 2px solid #313131;
+	/*background: rgb(236, 236, 236);*/
 }
 
 .moje-sprawy-text {
@@ -513,9 +513,11 @@ background:rgb(115, 233, 162);
 	text-align: center;
 	overflow: hidden;
 	position: relative;
-	margin-top:10px;
-	background:rgb(221,221,221);
-	box-shadow:inset 0 4px 10px rgb(202, 202, 202);
+	border-top: 1px solid #DADADA;  
+	/*background: rgb(32, 32, 32);*/
+	background:rgb(240, 240, 223);
+border-bottom: 1px solid white;
+	/*background-image: url("../Images/kalendarzTlo.png");*/
 }
 
 .left-event-details {
@@ -523,16 +525,14 @@ background:rgb(115, 233, 162);
 	width: 25%;
 	vertical-align: top;
 	position: relative;
-
 }
 
 .middle-event-details {
 	float: left;
 	width: 50%;
 	position: relative;
-	padding:20px;
-	color:gray;
-	background:rgb(202, 202, 202);
+	padding: 20px;
+	color: rgb(109,109,109);
 	/*background:rgb(76, 86, 94);*/
 	/*box-shadow:0 1px 5px rgb(60,60,60);*/
 	/*border:1px solid rgb(207, 207, 207);*/
@@ -547,10 +547,13 @@ background:rgb(115, 233, 162);
 
 .lobby-profile-menu {
 	width: 100%;
-	color: whitesmoke;
-	font-size: 1em;
-	padding: 10px 0;
-	overflow: hidden;
+color: whitesmoke;
+font-size: 1em;
+padding: 10px 0;
+overflow: hidden;
+background: rgb(32,32,32);
+border-top: 1px solid rgb(24,24,24);
+border-bottom: 1px solid rgb(24,24,24);
 }
 
 	.lobby-profile-menu div {
@@ -561,13 +564,9 @@ background:rgb(115, 233, 162);
 
 .event-list-date-header {
 	text-align: center;
-	color: rgb(252,252,252);
-	/*margin-bottom:40px;*/
-	/*
-background:rgb(228, 111, 111);
-*/
-	/*background: rgb(111, 177, 228);*/
-	background: rgb(160, 213, 255);
+	color: rgb(114,114,114);
+background: rgb(32, 32, 32);
+border-top: 1px solid rgb(24, 24, 24);
 }
 
 .events-text-container {
@@ -576,6 +575,11 @@ background:rgb(228, 111, 111);
 
 .events-text-name {
 	font-size: 1.2em;
+	font-weight:bold;
+}
+
+.event-title-container a{
+	color:rgb(104,104,104);
 }
 
 
@@ -604,8 +608,7 @@ background: rgba(40,40,40,0.2);
 	color: gray;
 	font-size: 1em;
 	overflow: hidden;
-	background:rgb(241,241,241);
-	border-top:1px solid white;
+	/*background: rgb(241,241,241);*/
 }
 
 .login-text {
@@ -618,14 +621,14 @@ background: rgba(40,40,40,0.2);
 	width: 100px;
 	padding: 20px;
 	/*box-shadow: 0 2px 10px rgb(60, 60, 60);*/
+	border:1px solid whitesmoke;
 	margin-left: 15px;
 	margin-top: 10px;
 }
 
 .event-title-container {
-	background: rgba(0,0,0,.2);
 	padding: 10px 0px;
-	margin-bottom:10px;
+	margin-bottom: 10px;
 }
 
 .events-text-author-container {
@@ -676,6 +679,74 @@ wydarzenia-tab {
 .zajecia-border-tab {
 	border-bottom: 10px solid rgb(187, 255, 241);
 }
+
+.slide-item-details {
+	margin-top: 60px;
+}
+
+
+#calendarDayDetailsTable {
+	width: 90%;
+	margin: 0 auto;
+	table-layout: fixed;
+	color:gray;
+}
+
+#calendarDayDetailsTable tbody tr{
+	height:300px;
+}
+
+#calendarDayDetailsTable tbody tr td{
+	border-color:rgb(243,243,243);
+}
+
+	#calendarDayDetailsTable td {
+		border: 1px solid #ddd;
+		text-align:center;
+	}
+
+.month-nav-container {
+display:inline-block;
+
+}
+.month-nav-container div{
+display:inline-block;
+padding:2px;
+color:orange;
+font-size:1.5em;
+}
+
+.month-name-calendar {
+margin:0 20px;
+font-size:2em;
+color:gray;
+font-weight:bold;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
