--- a/KalendarzKariery/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width" />
 <title>@ViewBag.Title</title>
 @Styles.Render("~/Content/css")
-
+<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 @Scripts.Render("~/bundles/jquery")
 <script src="~/Scripts/jquery-ui-1.8.20.custom.min.js"></script>
+
 @Scripts.Render("~/bundles/modernizr")
 @RenderSection("scripts", required: false)
 
 <script src="~/Scripts/knockout-2.2.1.js"></script>
-
 <script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
