--- a/KalendarzKariery/KalendarzKariery/Views/Home/_Lobby.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Home/_Lobby.cshtml
@@ -2,7 +2,7 @@
 	<div id="lobby-menu-header" class="site-menu-header">
 		<div id="lobby-logo">
 		</div>
-		<div style="float:right;width:600px;margin-right:10px;">
+		<div>
 		<div class="menu-item-container">
 			<div class="border-item inne-border-tab"></div>
 			<div class="menu-item"><span>Inne</span></div>
