--- a/KalendarzKariery/KalendarzKariery/Content/Site.css
+++ b/KalendarzKariery/KalendarzKariery/Content/Site.css
@@ -75,14 +75,13 @@ body header {
 }
 
 #lobbyBg {
-
 	position: relative;
 	width: 90%;
 	left: 0px;
 }
 
 #lobby-logo {
-	background-image: url(../Images/kalendarzGray3.png);
+	background-image: url(../Images/kalendarzLogo.png);
 	font-size: 1em;
 	width: 680px;
 	height: 100%;
@@ -93,10 +92,9 @@ body header {
 .calendar-navigation-arrows-left {
 	left: 3%;
 	position: fixed;
-	top: 200px;
+	top: 240px;
 	width: 50px;
 	z-index: 5;
-	border:1px solid white;
 }
 
 	.calendar-navigation-arrows-left img {
@@ -107,11 +105,10 @@ body header {
 .calendar-navigation-arrows-right {
 	right: 4%;
 	position: fixed;
-	top: 200px;
+	top: 240px;
 	width: 50px;
 	z-index: 5;
-	border:1px solid white;
-}
+	}
 
 	.calendar-navigation-arrows-right img {
 		position: static !important;
@@ -121,10 +118,9 @@ body header {
 .lobby-navigation-arrows-right {
 	right: 4%;
 	position: fixed;
-	top: 200px;
+	top: 240px;
 	width: 50px;
 	z-index: 5;
-	border:1px solid white;
 }
 
 	.lobby-navigation-arrows-right img {
@@ -135,10 +131,9 @@ body header {
 .details-navigation-arrows-left {
 	left: 4%;
 	position: fixed;
-	top: 200px;
+	top: 240px;
 	width: 50px;
 	z-index: 5;
-	border:1px solid white;
 }
 
 	.details-navigation-arrows-left img {
@@ -173,7 +168,7 @@ body header {
 	text-align: center;
 	color: white;
 	background: rgba(0,0,0,.04);
-	height:50px;
+	height: 50px;
 	/*border-left: 1px solid #D8D8D8;*/
 	border-bottom: 1px solid rgb(247, 247, 247);
 	border-top: 1px solid #D8D8D8;
@@ -181,31 +176,52 @@ body header {
 	border-right:2px solid #313131;*/
 }
 
+#loginPageContainer {
+	background: rgba(0,0,0,.04);
+	display: block;
+	border-top: 1px solid #DADADA;
+	border-bottom: 1px solid white;
+	margin: 20px 0;
+	width: 50%;
+	margin-left: 20px;
+	padding: 10px;
+	color: rgb(104,104,104);
+}
+
+#registerPageContainer {
+	background: rgba(0,0,0,.04);
+	display: block;
+	border-top: 1px solid #DADADA;
+	border-bottom: 1px solid white;
+	margin: 20px 0;
+	width: 50%;
+	margin-left: 20px;
+	padding: 10px;
+	color: rgb(104,104,104);
+	display: none;
+}
+
 #details-menu-header {
 	text-align: center;
 	color: white;
-	width:90%;
-	min-height:48px;
+	width: 90%;
+	min-height: 48px;
 	background: rgba(0,0,0,.04);
 	/*border-left: 1px solid #D8D8D8;*/
 	border-bottom: 1px solid rgb(247, 247, 247);
 	border-top: 1px solid #D8D8D8;
-	overflow:hidden;
+	overflow: hidden;
 	/*border-left:2px solid #313131;
 	border-right:2px solid #313131;*/
 }
 
 .site-menu-header {
 	text-align: center;
-	margin-top: 20px;
-	min-height: 132px;
+	min-height: 131px;
 	position: relative;
-	border-bottom:1px solid rgb(247, 247, 247);
-	background:rgba(0,0,0,.04);
-	/*background: rgb(37, 37, 37);
-	border-right: 2px solid #313131;*/
+	background: rgba(0,0,0,.04);
 	border-top: 1px solid rgb(221,221,221);
-	/*border-bottom:1px solid rgb(221,221,221);*/
+	border-bottom: 1px solid rgb(221,221,221);
 }
 
 .weekday-container {
@@ -335,13 +351,9 @@ body header {
 
 .menu-item {
 	border-top: 2px solid rgb(233, 233, 233);
-	/*border:1px solid rgb(213,213,213);*/
-	/*background: rgb(253, 253, 253);*/
 	background: rgba(0, 0, 0,.47);
-	/*box-shadow:4px 2px 8px rgb(187, 187, 187);*/
-	box-shadow:4px 2px 8px rgb(177, 177, 177);
+	/*box-shadow: 4px 2px 8px rgb(177, 177, 177);*/
 	height: 30px;
-	/*color: rgb(151, 151, 151);*/
 	color: rgb(213, 213, 213);
 	font-size: 0.8em;
 }
@@ -384,12 +396,9 @@ body header {
 	top: 10.5%;
 	position: absolute;
 	z-index: 10;
-	/*background: rgb(58, 58, 58);*/
-	background-image:url("/Images/kalendarzTlo2.png");
-	background-size:contain;
+	background: rgb(58, 58, 58);
 	opacity: .9;
 	z-index: 4;
-	width: 100% !important;
 	display: none;
 }
 
@@ -488,7 +497,7 @@ background:rgb(115, 233, 162);
 .cell-line-style {
 	position: absolute;
 	width: 1px;
-	display:none;
+	display: none;
 }
 
 .event-rectangle {
@@ -511,12 +520,12 @@ background:rgb(115, 233, 162);
 	border: 2px solid;
 	border-radius: 12px;
 	background: rgba(255,255,255,.8);
-	min-height:40px;
+	min-height: 40px;
 }
 
-.event-rectangle-details span{
-padding:10px;
-}
+	.event-rectangle-details span {
+		padding: 10px;
+	}
 
 
 .event-hover-container {
@@ -531,14 +540,11 @@ padding:10px;
 }
 
 	.lobby-content-body .title-header {
-		color: rgb(160, 160, 160);
+		color: rgb(114, 114, 114);
 	}
 
 .title-header {
 	text-align: center;
-	font-size: 2em;
-	padding: 10px;
-	background:white;
 	/*background: rgb(37, 37, 37);
 	border-top: 1px solid #313131;
 	border-right: 2px solid #313131;*/
@@ -561,26 +567,21 @@ padding:10px;
 .selected-content-container {
 	display: none;
 	margin-bottom: 50px;
-	border: 1px solid whitesmoke;
 }
 
 .news-event-details {
-	padding: 10px 0;
+	padding: 10px 10px;
+	background: rgba(0,0,0,.04);
+	margin: 10px 0;
 	text-align: center;
-	overflow: hidden;
 	position: relative;
+	overflow: hidden;
 	border-top: 1px solid #DADADA;
-	border-right:1px solid rgb(245,245,245);
-		/*background: rgb(32, 32, 32);*/
-	/*background: rgb(240, 240, 223);*/
 	border-bottom: 1px solid white;
-	/*background-image: url("../Images/kalendarzTlo.png");*/
 }
 
 .left-event-details {
 	float: left;
-	width: 25%;
-	vertical-align: top;
 	position: relative;
 }
 
@@ -590,7 +591,6 @@ padding:10px;
 	position: relative;
 	padding: 20px;
 	color: rgb(109,109,109);
-	background:rgb(253,253,253);
 	/*background:rgb(76, 86, 94);*/
 	/*box-shadow:0 1px 5px rgb(60,60,60);*/
 	/*border:1px solid rgb(207, 207, 207);*/
@@ -605,13 +605,15 @@ padding:10px;
 
 .lobby-profile-menu {
 	width: 100%;
-	color: whitesmoke;
+	color: white;
 	font-size: 1em;
-	padding: 10px 0;
+	padding: 10px 0px;
 	overflow: hidden;
-	/*background: rgb(32,32,32);
-	border-top: 1px solid rgb(24,24,24);
-	border-bottom: 1px solid rgb(24,24,24);*/
+	text-align: right;
+	background:rgb(136,136,136);
+	border-bottom: 3px solid rgb(199, 199, 199);
+	border-top:1px solid rgb(205, 255, 192);
+	border-right:3px solid rgb(168, 201, 161);
 }
 
 	.lobby-profile-menu div {
@@ -621,15 +623,18 @@ padding:10px;
 	}
 
 .event-list-date-header {
+	width: 150px;
+	margin: 0 auto;
 	text-align: center;
 	color: rgb(114,114,114);
-	background:#F0F8FF
-	/*background: rgb(32, 32, 32);
-	border-top: 1px solid rgb(24, 24, 24);*/
+	/*background:#F0F8FF*/
+	/*background: rgb(32, 32, 32);*/
+	border-top: 1px solid rgb(255, 255, 255);
 }
 
 .events-text-container {
 	text-align: left;
+	display: none;
 }
 
 .events-text-name {
@@ -655,7 +660,7 @@ padding:10px;
 }
 
 .event-list {
-	width: 100%;
+	width: 70%;
 	/*
 background: rgba(40,40,40,0.2);
 */
@@ -672,7 +677,7 @@ background: rgba(40,40,40,0.2);
 
 .login-text {
 	margin-right: 15px;
-	color: rgb(124, 124, 124);
+	color:rgb(205, 255, 192);
 }
 
 .event-kind-text {
@@ -680,14 +685,10 @@ background: rgba(40,40,40,0.2);
 	width: 100px;
 	padding: 20px;
 	/*box-shadow: 0 2px 10px rgb(60, 60, 60);*/
-	border: 1px solid whitesmoke;
-	margin-left: 15px;
-	margin-top: 10px;
+	border: 1px solid rgb(224,224,224);
 }
 
 .event-title-container {
-	padding: 10px 0px;
-	margin-bottom: 10px;
 }
 
 .events-text-author-container {
@@ -746,7 +747,7 @@ wydarzenia-tab {
 
 #calendarDayDetailsTable {
 	width: 90%;
-	margin-top:40px;
+	margin-top: 40px;
 	color: gray;
 	position: relative;
 }
@@ -754,9 +755,8 @@ wydarzenia-tab {
 	#calendarDayDetailsTable .table-details-head {
 		overflow: hidden;
 		text-align: left;
-		background:rgba(0,0,0,.04);
-		color:white;
-
+		background: rgba(0,0,0,.04);
+		color: white;
 	}
 
 		#calendarDayDetailsTable .table-details-head div {
@@ -766,8 +766,8 @@ wydarzenia-tab {
 
 	#calendarDayDetailsTable .table-details-body {
 		overflow: hidden;
-		background:rgba(255,255,255,.9);
-		border:2px solid rgb(223,223,223);
+		background: rgba(255,255,255,.9);
+		border: 2px solid rgb(223,223,223);
 	}
 
 		#calendarDayDetailsTable .table-details-body .details-day-cell {
@@ -784,29 +784,49 @@ wydarzenia-tab {
 }
 
 	.month-nav-container div {
-		border: 2px solid white;
+		/*border: 2px solid white;*/
 		display: inline-block;
 		padding: 0px 10px;
 		color: white;
-		border-radius: 10px;
 		font-size: 1.5em;
-		box-shadow: rgb(201, 201, 201) 0px 3px 5px;
+		padding-top:5px;
+		/*box-shadow: rgb(201, 201, 201) 0px 3px 5px;*/
+	}
+
+	.month-nav-container .nav-prev {
+		position:relative;
+		top:2px;
+	}
+
+	.month-nav-container .nav-next {
+		position:relative;
+		top:2px;
 	}
 
 		.month-nav-container div:hover {
 			cursor: pointer;
 		}
 
+		.month-nav-container div img{
+		width:20px !important;
+	}
+
 .month-name-calendar {
 	/*font-size: 2em;*/
-	color: gray;
+	color: rgb(147, 156, 149);
 	font-weight: bold;
 	width: 150px;
 	display: inline-block;
+	position:relative;
+	bottom:3px;
 }
 
 .calendar-eventSummary-btn {
 	margin-right: 20px;
+}
+
+.calendar-eventSummary-btn img{
+
 }
 
 .details-day-cell {
@@ -816,13 +836,101 @@ wydarzenia-tab {
 }
 
 .details-hour-line {
-
-position:absolute;
-background:whitesmoke;
-height:100%;
-width:1px;
-
+	position: absolute;
+	background: whitesmoke;
+	height: 100%;
+	width: 1px;
 }
+
+#logoutForm {
+	float: right;
+	margin-right:20px;
+}
+
+#logoutForm a{
+color:white;
+}
+
+.form-label {
+	width: 200px;
+	display: block;
+}
+
+.summary-validation-errors {
+	color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+.myButton-white {
+	margin-top: 40px;
+	margin-left: 40px;
+	-moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
+	box-shadow: inset 0px 1px 0px 0px #ffffff;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
+	background: -moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background: -webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background: -o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background: -ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
+	background-color: #ffffff;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;
+	border: 1px solid #dcdcdc;
+	display: inline-block;
+	color: #666666;
+	font-family: arial;
+	font-size: 15px;
+	font-weight: bold;
+	padding: 6px 24px;
+	text-decoration: none;
+	outline: none;
+	text-shadow: 0px 1px 0px #ffffff;
+}
+
+	.myButton-white:hover {
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
+		background: -moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+		background: -webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+		background: -o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+		background: -ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+		background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0);
+		background-color: #f6f6f6;
+		cursor: pointer;
+	}
+
+	.myButton-white:active {
+		position: relative;
+		top: 1px;
+		outline: none;
+	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -834,7 +942,7 @@ MEDIA QUERIES
 
 @media screen and (max-width: 1350px) {
 	#lobby-logo {
-	display:none;
+		display: none;
 	}
 }
 
