--- a/KalendarzKariery/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -1,35 +1,35 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<title>@ViewBag.Title</title>
-@Styles.Render("~/Content/css")
-<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-@Scripts.Render("~/bundles/jquery")
-<script src="~/Scripts/jquery-ui-1.8.20.custom.min.js"></script>
+	<meta charset="utf-8" />
+	<title>Kalendarz Kariery</title>
+	<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-@Scripts.Render("~/bundles/modernizr")
-@RenderSection("scripts", required: false)
+	@Styles.Render("~/Content/css")
+	@Scripts.Render("~/bundles/jquery")
+	@Scripts.Render("~/bundles/jqueryval")
+	@Scripts.Render("~/bundles/jqueryui")
+	@Scripts.Render("~/bundles/modernizr")
+	@Scripts.Render("~/bundles/knockout")
 
-<script src="~/Scripts/knockout-2.2.1.js"></script>
-<script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
-<script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
-<script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
-<script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
-<script src="~/Scripts/CalendarWidget/Slider/application.js"></script>
+	<script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
+	<script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
+	<script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
+	<script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
+	<script src="~/Scripts/CalendarWidget/Slider/application.js"></script>
 
-<script src="~/Models/JSModels/CalendarViewModel.js" defer="defer"></script>	
+	<script src="~/Models/JSModels/CalendarViewModel.js" defer="defer"></script>
 
 </head>
 <body>
-<header>
-</header>
+	<header>
+	</header>
 
-<section id="mainContainer">
+	<section id="mainContainer">
 
-@RenderBody()
+		@RenderBody()
 
-</section>
+	</section>
 
 
 </body>
